NOBUG: fixed r-button v-align CSS

--- a/src/assets/styles/components/buttons.scss
+++ b/src/assets/styles/components/buttons.scss
@@ -26,11 +26,16 @@
 
     i {
         vertical-align: middle;
-
         + span {
             vertical-align: middle;
         }
+    }
 
+    span {
+        vertical-align: middle;
+        + i {
+            vertical-align: middle;
+        }
     }
 
     &.btn-default {
